force-app/main/default/objects/Product_Feature__c/Product_Feature__c.object-meta.xml
<CustomObject>
    <description>SOX object - Holds feature data</description>
    <label>PDM Feature</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Feature Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PDM Feature</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>