force-app/main/default/objects/Product_Feature__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HYBRID RCDM</fullName>
            </value>
            <value>
                <fullName>CLOUD NATIVE PROTECTION</fullName>
            </value>
            <value>
                <fullName>KUBERNETES</fullName>
            </value>
            <value>
                <fullName>CLOUD CLUSTER ES</fullName>
            </value>
            <value>
                <fullName>CLOUD VAULT BACKUP</fullName>
            </value>
            <value>
                <fullName>SONAR</fullName>
            </value>
            <value>
                <fullName>APPFLOWS</fullName>
            </value>
            <value>
                <fullName>INCIDENT CONTAINMENT</fullName>
            </value>
            <value>
                <fullName>POLARIS RADAR</fullName>
            </value>
            <value>
                <fullName>HYBRID EDGE</fullName>
            </value>
            <value>
                <fullName>NAS DIRECT ARCHIVE</fullName>
            </value>
            <value>
                <fullName>IGNEOUS</fullName>
            </value>
            <value>
                <fullName>CLOUD VAULT ARCHIVE</fullName>
            </value>
            <value>
                <fullName>CLOUDON</fullName>
            </value>
            <value>
                <fullName>POLARIS GPS</fullName>
            </value>
            <value>
                <fullName>APP FLOWS</fullName>
            </value>
            <value>
                <fullName>PREMIUM SUPPORT</fullName>
            </value>
            <value>
                <fullName>CLOUDOUT</fullName>
            </value>
            <value>
                <fullName>CLOUD EDITION</fullName>
            </value>
            <value>
                <fullName>NAS CLOUD DIRECT</fullName>
            </value>
            <value>
                <fullName>CLOUD CLUSTER</fullName>
            </value>
            <value>
                <fullName>HYBRID SAP HANA</fullName>
            </value>
            <value>
                <fullName>UCL</fullName>
            </value>
            <value>
                <fullName>NOSQL</fullName>
            </value>
            <value>
                <fullName>PMC</fullName>
            </value>
            <value>
                <fullName>M365</fullName>
            </value>
            <value>
                <fullName>M365H</fullName>
            </value>
            <value>
                <fullName>THIRD PARTY RCDM</fullName>
            </value>
            <value>
                <fullName>RCDM</fullName>
            </value>
            <value>
                <fullName>HW SUPPORT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>