force-app/main/default/objects/Product_Feature__c/fields/Feature_EOL__c.field-meta.xml
<CustomField>
    <fullName>Feature_EOL__c</fullName>
    <label>Feature EOL</label>
    <type>Date</type>
</CustomField>