force-app/main/default/objects/Product_Feature__c/fields/Feature_start_date__c.field-meta.xml
<CustomField>
    <fullName>Feature_start_date__c</fullName>
    <label>Feature start date</label>
    <type>Date</type>
</CustomField>