force-app/main/default/objects/Product_Feature__c/fields/Feature_Type__c.field-meta.xml
<CustomField>
    <fullName>Feature_Type__c</fullName>
    <description>Created as part of License management project to indicates which PDM feature
        whether is it a OnPrem, Saas, or Cloud.</description>
    <label>Feature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Cloud - Core</fullName>
            </value>
            <value>
                <fullName>RCV - Core</fullName>
            </value>
            <value>
                <fullName>SaaS - Core</fullName>
            </value>
            <value>
                <fullName>OnPrem - Core</fullName>
            </value>
            <value>
                <fullName>Unstructured - Core</fullName>
            </value>
            <value>
                <fullName>Cloud - NonCore</fullName>
            </value>
            <value>
                <fullName>SaaS - NonCore</fullName>
            </value>
            <value>
                <fullName>Unstructured - NonCore</fullName>
            </value>
            <value>
                <fullName>OnPrem - NonCore</fullName>
            </value>
            <value>
                <fullName>RCV - NonCore</fullName>
            </value>
            <value>
                <fullName>ADDON LICENCE</fullName>
                <isActive>false</isActive>
                <label>ADDON LICENCE</label>
            </value>
            <value>
                <fullName>APPLICATION RECOVERY</fullName>
                <isActive>false</isActive>
                <label>APPLICATION RECOVERY</label>
            </value>
            <value>
                <fullName>ARCHIVE</fullName>
                <isActive>false</isActive>
                <label>ARCHIVE</label>
            </value>
            <value>
                <fullName>BACKUP &amp; ARCHIVE</fullName>
                <isActive>false</isActive>
                <label>BACKUP &amp; ARCHIVE</label>
            </value>
            <value>
                <fullName>BRIK SWAP</fullName>
                <isActive>false</isActive>
                <label>BRIK SWAP</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <isActive>false</isActive>
                <label>Basic</label>
            </value>
            <value>
                <fullName>CLOUD LICENSE</fullName>
                <isActive>false</isActive>
                <label>CLOUD LICENSE</label>
            </value>
            <value>
                <fullName>CLOUD PROTECTION</fullName>
                <isActive>false</isActive>
                <label>CLOUD PROTECTION</label>
            </value>
            <value>
                <fullName>CLOUD STORAGE</fullName>
                <isActive>false</isActive>
                <label>CLOUD STORAGE</label>
            </value>
            <value>
                <fullName>CORE LICENCE</fullName>
                <isActive>false</isActive>
                <label>CORE LICENCE</label>
            </value>
            <value>
                <fullName>CORE LICENSE</fullName>
                <isActive>false</isActive>
                <label>CORE LICENSE</label>
            </value>
            <value>
                <fullName>CREDIT</fullName>
                <isActive>false</isActive>
                <label>CREDIT</label>
            </value>
            <value>
                <fullName>DATA DISCOVERY</fullName>
                <isActive>false</isActive>
                <label>DATA DISCOVERY</label>
            </value>
            <value>
                <fullName>DATA INVESTIGATION</fullName>
                <isActive>false</isActive>
                <label>DATA INVESTIGATION</label>
            </value>
            <value>
                <fullName>DATA MIGRATION</fullName>
                <isActive>false</isActive>
                <label>DATA MIGRATION</label>
            </value>
            <value>
                <fullName>DATA PROTECTION</fullName>
                <isActive>false</isActive>
                <label>DATA PROTECTION</label>
            </value>
            <value>
                <fullName>DISK RETENTION</fullName>
                <isActive>false</isActive>
                <label>DISK RETENTION</label>
            </value>
            <value>
                <fullName>E1000</fullName>
                <isActive>false</isActive>
                <label>E1000</label>
            </value>
            <value>
                <fullName>EVENT</fullName>
                <isActive>false</isActive>
                <label>EVENT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>