force-app/main/default/objects/Product_Feature__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <description>Created as part of summer release - Replacement Framework and License management
        project to store the name of the SKU features that Rubrik uses for marketing based on the
        market and demand conditions.</description>
    <label>Feature Marketing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>