force-app/main/default/objects/Product_Feature__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PDM Feature</relationshipLabel>
    <relationshipName>PDM_Feature</relationshipName>
    <type>Lookup</type>
</CustomField>