force-app/main/default/objects/Product_Feature__c/fields/Product_Pillar_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_1__c</fullName>
    <label>Product Pillar 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>