force-app/main/default/objects/Product_Feature__c/fields/Product_Pillar_2__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_2__c</fullName>
    <description>Product Pillar 2</description>
    <label>Product Pillar 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>