force-app/main/default/objects/Product_Feature__c/fields/Provisioning_Method__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Method__c</fullName>
    <label>Provisioning Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Download</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>