force-app/main/default/objects/Product_Feature__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
            <value>
                <fullName>In-Active</fullName>
                <isActive>false</isActive>
                <label>In-Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>