force-app/main/default/objects/Product_Feature__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT APPLICABLE</fullName>
            </value>
            <value>
                <fullName>VM</fullName>
            </value>
            <value>
                <fullName>BETB</fullName>
            </value>
            <value>
                <fullName>FETB</fullName>
            </value>
            <value>
                <fullName>NODE</fullName>
            </value>
            <value>
                <fullName>EACH</fullName>
            </value>
            <value>
                <fullName>USERS</fullName>
            </value>
            <value>
                <fullName>TASK (HOURS)</fullName>
            </value>
            <value>
                <fullName>GB</fullName>
            </value>
            <value>
                <fullName>FEGB</fullName>
            </value>
            <value>
                <fullName>REPO</fullName>
            </value>
            <value>
                <fullName>OBJ</fullName>
                <isActive>false</isActive>
                <label>OBJ</label>
            </value>
            <value>
                <fullName>TB</fullName>
                <isActive>false</isActive>
                <label>TB</label>
            </value>
            <value>
                <fullName>Unit</fullName>
                <isActive>false</isActive>
                <label>Unit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>