force-app/main/default/objects/Product_Feature__c/validationRules/Record_can_not_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_can_not_be_edited</fullName>
    <active>true</active>
    <errorConditionFormula>$Profile.Name != &apos;API Integration User&apos;</errorConditionFormula>
    <errorDisplayField>Feature__c</errorDisplayField>
    <errorMessage>This record is not editable</errorMessage>
</ValidationRule>